--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sparticuz/chromium": "^132.0.0",
     "@sparticuz/chromium-min": "^133.0.0",
     "0g": "^0.0.9",
+    "aos": "^2.3.4",
     "aws4": "^1.12.0",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
@@ -47,6 +48,7 @@
     "react-to-print": "^3.0.5",
     "registry.npmjs.org": "^1.0.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.6",
     "swr": "^2.2.4",
     "uuid": "^9.0.1"
   },
